apps/docker-docker.github.io/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: dockerdocs-svc
spec: 
  ports: 
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector: 
    k8s-app: dockerdocs
  type: NodePort
