apps/docker-docker.github.io/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dockerdocs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /dockerdocs
        backend:
          serviceName: dockerdocs-svc
          servicePort: 4000
